Removed Warnings from memoranda/ui/AppFrame.java